# Thoth

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.tape  pyproject.toml
.githooks/: commit-msg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: commit-convention.md  features.md
prototype/python/tests/: test_cli.py  test_db.py  test_paths.py  test_recorder.py
prototype/python/tth/: database.py  project.py
scripts/: seed-demo.sh  test_hooks.sh
shells/: thoth.bash  thoth.zsh
src/: cli.rs  config.rs  database.rs  doctor.rs  edit.rs  error.rs  export.rs  forget.rs  hooks.rs  lib.rs  logging.rs  main.rs  paths.rs  project.rs  prompt.rs  recorder.rs  schema.rs  search.rs  session.rs  sessions.rs  stats.rs  tags.rs  theme.rs  workspaces.rs
src/tui/: app.rs  event.rs  fuzzy.rs  mod.rs  render.rs  time.rs
tests/: cli.rs  config_e2e.rs  conftest.py  export_e2e.rs  forget_e2e.rs  search_e2e.rs  sessions_e2e.rs  tags_e2e.rs  test_cli.py  test_db.py  test_logging.py  test_paths.py  test_project.py  test_recorder.py  test_session.py  theme_e2e.rs
tth/: cli.py  constants.py  database.py  db.py  logging_config.py  project.py  recorder.py  schema.py  session.py
