[package]
name = "thoth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tth"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
serde_json = "1"
comfy-table = "7"
ratatui = "0.29"
crossterm = "0.28"
nucleo-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
