[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thoth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []
# typer and rich will return with the query/display slice

[project.scripts]
tth = "tth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
